--- a/app/MemberModule/components/SignEventControl.latte
+++ b/app/MemberModule/components/SignEventControl.latte
@@ -38,7 +38,7 @@
 <div class="clearfix"></div>
 
 {if $user->isInRole('member')and(($userIsInOrgList)or($user->isInRole('admin')))}
-	<a id="change-button" href="javascript:change()" class="buttonLike"><span class="icon-pencil"> upravit účastníky</a>
+	<a id="change-button" class="buttonLike"><span class="icon-pencil"> upravit účastníky</a>
 	<div id="change-form" class="hide">
 		<h3>Upravit účastníky</h3>
 		<div>Přidat: {control logginForm}</div>
