--- a/www/subdom/member/css/main.css
+++ b/www/subdom/member/css/main.css
@@ -2,18 +2,14 @@ body {margin: 0; padding: 0;}
 body, body table {font-family: Verdana,Arial,Helvetica,Calibri,sans-serif; font-size: 90%;}
 #main {min-width: 22em; width: 90%; max-width: 70em; margin: 0 auto; position: relative; padding-bottom: 2em;}
 
-#top {border-radius: 0 0 25px 25px; background-color: white;
-	-moz-box-shadow: inset 0 -15px 10px -10px #da251c;
-	-webkit-box-shadow: inset 0 -15px 10px -10px #da251c;
-	box-shadow: inset 0 -15px 10px -10px #da251c;
-}
+#top {border-bottom: 4px solid #e1001a;}
 
-#top #top_right {border: solid #da251c 4px; padding: 1ex; position: relative; top: -1ex;
+#top #top_right {border: solid #e1001a 4px; padding: 1ex; position: relative; top: -1ex;
 border-radius: 0 0 15px 15px; float: right; color: #12397e; font-weight: bold; font-size: 1.2em;}
 
-#top #top_right a {color: #da251c}
+#top #top_right a {color: #e1001a}
     
-#menu { float: left; list-style-type: none; margin: 0; padding: 0; }
+#menu {float: left; list-style-type: none; margin: 0; padding: 0; }
 #menu li a {display: block; text-decoration: none; color: inherit;}
 #menu li {background-color: #60afe4; text-decoration: none; border: 1px solid black; 
 font-size: 1.5em;  font-family: Arial, sans-serif; margin-top: 10%; border-radius: 1ex;
@@ -23,11 +19,7 @@ width: 100%; display: block; color: white; font-weight: bold; padding: 0.1ex 0.1
 	background-image: linear-gradient(#60afe4,#0089d2); 
 }
 
-#menu li.current {color: black; background-color: #e83431;
-	background-image: -moz-linear-gradient(#e83431,#da251c);
-	background-image: -webkit-linear-gradient(#e83431,#da251c);
-	background-image: linear-gradient(#e83431,#da251c);
-}  
+#menu li.current {color: black; background-color: #e83431; background-image: none;}
 
 #menu a:hover, #menu ul a:active, #menu a:focus {color: #e83431;}
 #menu li.current a {color: black;}
@@ -72,7 +64,7 @@ div#texyPreview.texy {border: none; padding: 0;}
 .buttonMenu {padding: 0; text-align: right;}
 .buttonMenu li {float: right; display: inline; list-style-type: none; margin-left: 1ex; margin-bottom: 1ex;}
 
-#top h1 {font-size: 1.9em; color: #d90424; margin: 1ex 1ex; display: inline-block; vertical-align: 100%;}
+#top h1 {font-size: 1.9em; color: #e1001a; margin: 1ex 1ex; display: inline-block; vertical-align: 100%;}
 h2 {font-size: 1.3em; margin-top: 1ex;}
 h3 {font-size: 1em;}
 
@@ -119,7 +111,7 @@ ul.error li {color: red;}
 .loader { background-image: url('../img/loading.gif'); background-repeat: no-repeat; display: inline-block; height: 24px; width: 24px; background-position: center;}
 
 .buttonLike {color: white; font-weight: bold; padding: 0.5ex 1ex; border-radius: 10px; background-color: #0089d2;
-white-space: nowrap; display: inline; display: inline-block;
+white-space: nowrap; display: inline-block;
 	background-image: -moz-linear-gradient(#60afe4,#0089d2); 
 	background-image: -webkit-linear-gradient(#60afe4,#0089d2);
 	background-image: linear-gradient(#60afe4,#0089d2);  
@@ -134,7 +126,7 @@ a.head {background-color: #12397e; font-size: 2ex; border: 1px solid black;
 #text a.buttonLike {text-decoration: none;}
 
 #text a.buttonLike:hover, #text a.buttonLike:active, #text a.buttonLike:focus 
-{background-color: #da251c; color: white; background-image: none;}
+{background-color: #e1001a; color: white; background-image: none;}
 
 #text span.gray.buttonLike {background-color: gray; 
 	background-image: -moz-linear-gradient(silver,gray);
