Big JS update, JQuery libraly updated to version 3.2.1, updated all other libraly like fancybox (version 3.1.20), shotcuts, jquery UI, plupload, netteForms, remove old unnesessary code + css and color reformat

--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -25,7 +25,7 @@
 
   <link rel="alternate" title="VZS Jablonec Fotogalerie" n:href="//:Member:Feed:albums" type="application/rss+xml" n:if="$user->isLoggedIn()">
 
-  <script src="{$baseUri}/js/jquery.min.js" type="text/javascript"></script>
+  <script src="{$baseUri}/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 
   <title>{block #title|stripHtml|trim}{/block} | VZS Jablonec Fotogalerie</title>
   
