--- a/app/PhotoModule/templates/Album.add.latte
+++ b/app/PhotoModule/templates/Album.add.latte
@@ -1,12 +1,11 @@
 {block #head}
-    <link rel="stylesheet" href="{$basePath}/css/jquery-ui.custom.css" type="text/css">
+    <link rel="stylesheet" href="{$basePath}/css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="{$basePath}/css/jquery.ui.plupload.css" type="text/css">
 
     <style type="text/css" n:syntax="off">
     #uploader-test { margin: 0 auto; width: 100% !important;}
     </style>
 
-    <script type="text/javascript" src="{$basePath}/js/jquery.min.js"></script>
     <script type="text/javascript" src="{$basePath}/js/jquery-ui.min.js"></script>
 
     <script type="text/javascript" src="{$basePath}/js/plupload.full.min.js"></script>
