--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -1,27 +1,27 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUri}/css/jquery-ui.custom.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="{$baseUri}/css/jquery-ui.min.css" type="text/css" media="screen" />
 
 <style type="text/css" n:syntax="off">
 	.photoList li { width: 150px; height: 100px; font-size: 1em; text-align: center; position: relative; cursor: move;}
 	.photoList li img:hover, .photoList li:hover img { border-color: #ea9419;}
 	.photoList .hidden:before { background-repeat: no-repeat; bottom: 0; z-index: 3; content: " "; display: block; position: absolute; height: 14px; width: 14px;}
-	.photoList li input.title { width: 98%; position: absolute; bottom: 0px; right: 0px; font-size: 0.8em; background-color: rgba(0,0,0,0.5); z-index: 2; text-align: right;}
-	.photoList li input.selected { position: absolute; top: 0px; left: 0px; z-index: 2;}
+	.photoList li input.title { width: 98%; position: absolute; bottom: 0; right: 0; font-size: 0.8em; background-color: rgba(0,0,0,0.5); z-index: 2; text-align: right;}
+	.photoList li input.selected { position: absolute; top: 0; left: 0; z-index: 2;}
 	#frm-superForm label { font-weight: bold;}
 	#frm-superForm-name { font-size: 1.5em; font-weight: bold;}
-	#frm-superForm-text { width: 98%; font-family: Verdana,Arial,Helvetica,Calibri,sans-serif; font-size: 1em; height: 10em;}
+	#frm-superForm-text { width: 98%; font-family: Verdana,Arial,Helvetica,Calibri,sans-serif; font-size: 1em; height: 3em;}
 	.clearel { clear: both;}
 	#fistrRow { line-height: 2em}
 	.date { text-align: center;}
 	#ui-datepicker-div { z-index: 5 !important;}
 </style>
 
-<script src="{$baseUri}/js/jquery.nette.js" type="text/javascript"></script> 
-<script src="{$baseUri}/js/netteForms.js" type="text/javascript"></script>
+<script src="{$baseUri}/js/netteForms.min.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="{$baseUri}/js/jquery.shortcuts.min.js"></script>
+<script type="text/javascript" src="{$baseUri}/js/jquery.hotkeys.js"></script>
 <script type="text/javascript" src="{$baseUri}/js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
+<script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
 
 <script type="text/javascript">
 	function swapTitle(el){
@@ -32,24 +32,13 @@
 		})
 	}
 	
-	$.Shortcuts.add({
-	    	mask: 'Ctrl+A',
-	    	handler: function() {
-        		$('input.selected').attr('checked','true');
-    		}
-	});
-
 	$(function() {
-        $.Shortcuts.start();
+		$('#frm-superForm-text').textareaAutoSize();
 
-        $('#photoText').on('keyup','textarea',function (){
-    		$(this).height(0);
-    		$(this).height(this.scrollHeight);
+		$(document).bind('keydown', 'ctrl+a', function(){
+			$('input.selected').attr('checked','true');
+			return false;
 		});
-		
-		$('#photoText').find('textarea').keyup();
-
-		Nette.addEvent(document.getElementById('frm-superForm'), 'submit', 'potvrdit');
 
 		var elem = document.createElement('input');
     	elem.setAttribute('type', 'date');
