--- a/app/PhotoModule/templates/Myself.default.latte
+++ b/app/PhotoModule/templates/Myself.default.latte
@@ -1,16 +1,15 @@
 {block #head}
-<link rel="stylesheet" type="text/css" href="{$baseUri}/css/jquery-ui.custom.css" />
+<link rel="stylesheet" type="text/css" href="{$baseUri}/css/jquery-ui.min.css" />
 <link rel="stylesheet" type="text/css" href="{$baseUri}/css/photolist.css">
 <style type="text/css" n:syntax="off">
-#news {margin-left: 2em;}
-#news h3 {margin-bottom: 0px;}
-#news ul {margin-top: 1ex;}
-#frm-albumForm table, #frm-albumForm #frm-albumForm-name, #frm-albumForm textarea {width: 100%}
-ul {list-style: disc;}
+#news { margin-left: 2em;}
+#news h3 { margin-bottom: 0;}
+#news ul { margin-top: 1ex;}
+#frm-albumForm table, #frm-albumForm #frm-albumForm-name, #frm-albumForm textarea { width: 100%}
+ul { list-style: disc;}
 </style>
 
-<script src="{$baseUri}/js/jquery.nette.js" type="text/javascript"></script> 
-<script src="{$baseUri}/js/netteForms.js" type="text/javascript"></script>
+<script src="{$baseUri}/js/netteForms.min.js" type="text/javascript"></script>
 
 <script type="text/javascript" src="{$basePath}/js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
