--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (max-width: 750px)">
   <link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (orientation: portrait)">
-  
+
   <!--[if IE]>
   <link rel="stylesheet" href="{$baseUri}/css/ie.css" type="text/css">
   <![endif]-->
@@ -28,7 +28,7 @@
   <script src="{$baseUri}/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 
   <title>{block #title|stripHtml|trim}{/block} | VZS Jablonec Fotogalerie</title>
-  
+
   {block #head}{/block}
 </head>
 <body>
@@ -88,17 +88,16 @@
 
 {define photoList}
 {if}
-<a n:href="Album:view,$album->id.'-'.$album->slug"><h3>{$album->name}</h3></a>
-  
-  {var $photos = $album->related('photo')->order('order, date_add')->limit(8)}
-  
-  {if ($album->visible) and (!$user->isLoggedIn())}{php $photos->where('visible',TRUE)}{/if}
-  
-  <a n:href="Album:view,$album->id.'-'.$album->slug" title="{$album->text|truncate:70}" class="round">
-  <ul n:inner-foreach="$photos as $image" class="photoList">
+<a n:href="Album:view $album->id.'-'.$album->slug"><h3>{$album->name}</h3></a>
+	{var $photos = $album->related('photo')}
+	{if ($album->visible) and (!$user->isLoggedIn())}{php $photos->where('visible', TRUE)}{/if}
+	{var $images = clone $photos}
+
+  <a n:href="Album:view $album->id.'-'.$album->slug" title="{$album->text|truncate:70}" class="round">
+  <ul n:inner-foreach="$images->order('order, date_add')->limit(8) as $image" class="photoList">
     <li>{include #image}</li>
   </ul></a>
-  
-  {include #albumPopis, album => $album, pocet => Nette\Utils\Arrays::get($pocet,$album->id,0)}
+
+  {include #albumPopis album => $album, pocet => $photos->count('id')}
 {/if isset($image)or($user->isLoggedIn())}
 {/define}
