--- a/app/PhotoModule/templates/News.default.latte
+++ b/app/PhotoModule/templates/News.default.latte
@@ -1,26 +1,31 @@
 {block #head}
 <link rel="stylesheet" type="text/css" href="{$baseUri}/css/photolist.css">
 <style type="text/css" n:syntax="off">
-	.slides_container { list-style-type: none; width: 570px; display: none; padding: 0px; margin: 1em auto;}
-	.slides_container li { width: 570px; height: 300px; display:block; text-align: center; overflow: hidden;}
-	.slides_container li img { vertical-align: middle; max-height: 270px; max-width: 570px; border: 10px solid white; 
-		border-radius: 5px; box-shadow: 7px 7px 0px #161b1c;}
-	#slides #controls { text-align: center;}
-	#slides #controls .prev { margin-right: 10em;}
-	#slides { position: relative;}
-	#slides .photoList { position: absolute; top: 25%; min-width: 22em; width: 99%; max-width: 76em; text-align: center;}
+	#slides { position: relative; height: 360px;}
+	#js-slides { display: none;}
+	.slidesjs-container { text-align: center; }
+ 	#slides .photoList { position: absolute; top: 25%; min-width: 22em; width: 99%; text-align: center;}
+	.slide img { vertical-align: middle; max-height: 270px; max-width: 570px; border: 10px solid white;
+	border-radius: 5px; box-shadow: 7px 7px 0 #161b1c;}
 </style>
 
-<script src="{$baseUri}/js/slides.min.jquery.js"></script>	
+<script src="{$baseUri}/js/jquery.slides.js"></script>
 <script>
 	$(function(){
-		$('#slides').slides({
-			preload: false,
-			preloadImage: '{$baseUri|noescape}/img/fancybox_loading.gif',
-			generatePagination: false,
-			play: 5000,
-			pause: 2500,
-			hoverPause: true
+		$('#js-slides').slidesjs({
+			height: 270,
+			play: {
+				active: false,
+				auto: true,
+				interval: 5000,
+				swap: true
+			},
+			navigation: {
+				active: false
+			},
+			pagination: {
+				active: false
+			}
 		});
 	});
 </script>
@@ -35,7 +40,7 @@
 		<li n:foreach="$photos as $image">{include #image image => $image}</li>
 	</ul>
 
-	<ul class="slides_container" n:inner-foreach="$photos as $image">
+	<ul id="js-slides" class="slides-container" n:inner-foreach="$photos as $image">
 	<li><div class="slide">
 		{var $album = $image->ref('album')}
 		<a n:href="Album:view#$image->filename,$album->id.'-'.$album->slug" title="{$album->name}">
@@ -43,10 +48,6 @@
 		</a>
 	</div></li>
 	</ul>
-<div id="controls">
-	<a href="#" class="prev">Předchozí</a>
-	<a href="#" class="next">Další</a>
-</div>
 </div>
 
 
