Added missing js type declaration + link to minified version

--- a/app/PhotoModule/templates/News.default.latte
+++ b/app/PhotoModule/templates/News.default.latte
@@ -9,7 +9,7 @@
 	border-radius: 5px; box-shadow: 7px 7px 0 #161b1c;}
 </style>
 
-<script src="{$baseUri}/js/jquery.slides.js"></script>
+<script src="{$baseUri}/js/jquery.slides.min.js" type="text/javascript"></script>
 <script>
 	$(function(){
 		$('#js-slides').slidesjs({
