Added type to js declaration

--- a/app/PhotoModule/templates/News.default.latte
+++ b/app/PhotoModule/templates/News.default.latte
@@ -10,7 +10,7 @@
 </style>
 
 <script src="{$baseUri}/js/jquery.slides.min.js" type="text/javascript"></script>
-<script>
+<script type="text/javascript" n:syntax="off">
 	$(function(){
 		$('#js-slides').slidesjs({
 			height: 270,
