--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUri}/css/jquery-ui.min.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="{$baseUri}/css/jquery-ui.min.css" type="text/css" media="screen">
 
 <style type="text/css" n:syntax="off">
 	.photoList li { width: 150px; height: 100px; font-size: 1em; text-align: center; position: relative; cursor: move;}
