--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -6,47 +6,45 @@
  * @param array    $flashes  flash messages
  * @param Nette\Web\User $user  current user
  *}
-
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="initial-scale=1, width=device-width">
-  <meta name="format-detection" content="telephone=no">
-  <link rel="shortcut icon" href="{$baseUri}/img/fav.ico" type="image/x-icon">
-  <link rel="stylesheet" href="{$baseUri}/css/main.css" type="text/css">
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="initial-scale=1, width=device-width">
+	<meta name="format-detection" content="telephone=no">
+	<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">
+	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
+	<link rel="stylesheet" href="{$baseUri}/css/main.css" type="text/css">
 
-  <link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (max-width: 750px)">
-  <link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (orientation: portrait)">
+	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (max-width: 750px)">
+	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (orientation: portrait)">
 
-  <!--[if IE]>
-  <link rel="stylesheet" href="{$baseUri}/css/ie.css" type="text/css">
-  <![endif]-->
+	<!--[if IE]><link rel="stylesheet" href="{$baseUri}/css/ie.css" type="text/css"><![endif]-->
 
-  <link rel="alternate" title="VZS Jablonec Fotogalerie" n:href="//:Member:Feed:albums" type="application/rss+xml" n:if="$user->isLoggedIn()">
+	<link rel="alternate" title="VZS Jablonec Fotogalerie" n:href="//:Member:Feed:albums" type="application/rss+xml" n:if="$user->isLoggedIn()">
 
-  <script src="{$baseUri}/js/jquery-3.2.1.min.js" type="text/javascript"></script>
+	<script src="{$baseUri}/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 
-  <title>{block #title|stripHtml|trim}{/block} | VZS Jablonec Fotogalerie</title>
+	<title>{block #title|stripHtml|trim}{/block} | VZS Jablonec Fotogalerie</title>
 
-  {block #head}{/block}
+	{block #head}{/block}
 </head>
 <body>
 <div id="main">
 <div id="top">
-  <ul id="mainMenu" n:inner-foreach="$mainMenu as $item">
-    <li n:if="(!$item->role)or($user->isInRole($item->role))" n:class="$presenter->isLinkCurrent($item->current) ? current">
-      <a n:href="$item->link">{$item->title}</a>
-    </li>
-    <li n:if="($iterator->isLast())and(!$user->isLoggedIn())">
-      <a n:href="Sign:in">Přihlášení</a>
-    </li>
-  </ul>
+	<ul id="mainMenu" n:inner-foreach="$mainMenu as $item">
+		<li n:if="(!$item->role)or($user->isInRole($item->role))" n:class="$presenter->isLinkCurrent($item->current) ? current">
+		  	<a n:href="$item->link">{$item->title}</a>
+		</li>
+	</ul>
 
-  <div id="header">
-    <a n:href="News:" title="Vzs Jablonec Fotogalerie"><img src="{$baseUri}/img/vzs_jbc_logo.png" alt="Logo" width="168" height="80"></a>
-    <h1><span></span>VZS Jablonec Fotogalerie</h1>
-  </div>
+	<div id="header">
+		<a n:href="News:" title="Vzs Jablonec Fotogalerie">
+			<img src="{$baseUri}/img/vzs.svg" alt="VZS ČČK" width="80" height="80">
+			<img src="{$baseUri}/img/zralok.svg" alt="VZS JBC" width="80" height="80">
+		</a>
+		<h1><span></span>VZS Jablonec Fotogalerie</h1>
+	</div>
 </div>
 
 <div id="content">
