--- a/app/MemberModule/templates/Sign.@layout.latte
+++ b/app/MemberModule/templates/Sign.@layout.latte
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta http-equiv="content-language" content="cs">
-  <meta name="viewport" content="initial-scale=1, width=device-width"/>
-  <link rel="shortcut icon" href="{$basePath}/img/fav.ico" type="image/x-icon">
-  <title>Přihlášení | VZS Jablonec</title>
-  <link rel="stylesheet" href="{$basePath}/css/main.css" type="text/css">
-  <script src="{$basePath}/js/jquery.min.js" type="text/javascript"></script>
-  <script src="{$basePath}/js/jquery.nette.js" type="text/javascript"></script>
-  <script src="{$basePath}/js/netteForms.js" type="text/javascript"></script>
-  <style type="text/css" media="screen" n:syntax="off">
-    <!--
-    table { margin: 0 auto; text-align: left; }
-    #hlavni { max-width: 30em; margin: 0 auto; text-align: center; }
-    #nahore { height: 95px; margin: 1em auto 1em auto; padding: 0 4em; overflow: hidden; }
-    //-->
-    </style>
-  {block #head}{/block}
-  </head>    
-  <body>   
-  <div id="hlavni">
-  <div id="nahore">
-    <img class="float-left" src="{$basePath}/img/vzs.png" alt="Vodní záchranná služba ČČK" width="95" height="95">
-    <img class="float-right" src="{$basePath}/img/jbc.png" alt="VZS Jablonec nad Nisou" width="95" height="95">
-  </div>
-    {include #content}
-  </div>
-  </body>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta http-equiv="content-language" content="cs">
+	<meta name="viewport" content="initial-scale=1, width=device-width"/>
+	<link rel="shortcut icon" href="{$basePath}/img/favicon.ico" type="image/x-icon">
+	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
+	<title>Přihlášení | VZS Jablonec</title>
+	<link rel="stylesheet" href="{$basePath}/css/main.css" type="text/css">
+	<script src="{$basePath}/js/jquery.min.js" type="text/javascript"></script>
+	<script src="{$basePath}/js/jquery.nette.js" type="text/javascript"></script>
+	<script src="{$basePath}/js/netteForms.js" type="text/javascript"></script>
+	<style type="text/css" media="screen" n:syntax="off">
+		table { margin: 0 auto; text-align: left; }
+		#hlavni { max-width: 30em; margin: 0 auto; text-align: center; }
+		#nahore { height: 95px; margin: 1em auto 1em auto; padding: 0 4em; overflow: hidden; }
+	</style>
+	{block #head}{/block}
+</head>
+<body>
+	<div id="hlavni">
+		<div id="nahore">
+			<img class="float-left" src="{$basePath}/img/vzs.svg" alt="Vodní záchranná služba ČČK" width="95" height="95">
+			<img class="float-right" src="{$basePath}/img/zralok.svg" alt="VZS Jablonec nad Nisou" width="95" height="95">
+		</div>
+		{include #content}
+	</div>
+	</body>
 </html>
 
