Downgrade JQueryUI js libraly from version 1.12.1 to 1.10.2 when is nessesary (Pupload)

--- a/app/PhotoModule/templates/Album.add.latte
+++ b/app/PhotoModule/templates/Album.add.latte
@@ -6,11 +6,13 @@
     #uploader-test { margin: 0 auto; width: 100% !important;}
     </style>
 
-    <script type="text/javascript" src="{$basePath}/js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="{$basePath}/js/jquery-ui-1.10.2.min.js"></script>
+    {*<script type="text/javascript" src="{$basePath}/js/jquery-ui.min.js"></script>*}
+	{*<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>*}
 
     <script type="text/javascript" src="{$basePath}/js/plupload.full.min.js"></script>
     <script type="text/javascript" src="{$basePath}/js/plupload.cs.js"></script>
-    <script type="text/javascript" src="{$basePath}/js/jquery.ui.plupload.js"></script>
+    <script type="text/javascript" src="{$basePath}/js/jquery.ui.plupload.min.js"></script>
 {/block}
 
 {block #content}
