--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -19,7 +19,7 @@
 <script src="{$baseUri}/js/netteForms.min.js" type="text/javascript"></script>
 
 <script type="text/javascript" src="{$baseUri}/js/jquery.hotkeys.js"></script>
-<script type="text/javascript" src="{$baseUri}/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="{$baseUri}/js/jquery-ui-1.12.1.min.js"></script>
 <script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
 <script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
 
