--- a/app/PhotoModule/templates/Myself.default.latte
+++ b/app/PhotoModule/templates/Myself.default.latte
@@ -11,7 +11,8 @@ ul { list-style: disc;}
 
 <script src="{$baseUri}/js/netteForms.min.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="{$basePath}/js/jquery-ui.min.js"></script>
+{*<script type="text/javascript" src="{$basePath}/js/jquery-ui-1.10.2.min.js"></script>*}
+<script type="text/javascript" src="{$basePath}/js/jquery-ui-1.12.1.min.js"></script>
 <script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
 <script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
 {/block}
