--- a/www/subdom/photo/css/main.css
+++ b/www/subdom/photo/css/main.css
@@ -42,8 +42,9 @@ border-bottom: 1px solid #89520c; border-bottom: 1px solid black;  background-co
 
 #content {margin-left: 0; padding-top: 1em; float: none;}
 
-#ajax-spinner{margin: 15px 0 0 15px; padding: 13px; background: transparent url('../img/fancybox_loading.gif') no-repeat 50% 50%;
-font-size: 0; z-index: 10; display: none;}
+.spinner {background: transparent url('../img/loading.gif') no-repeat 50% 50%; z-index: 10; }
+
+#load-more-button .spinner {position: relative; left: -1em; padding: 15px;}
 
 .photoList { list-style-type: none; padding: 0; }
 .photoList li { margin: 3px 3px 3px 0; padding: 1px; float: left; width: 150px; height: 100px; text-align: center; font-size: 1em;}
